<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main">

    <ImageView
        android:id="@+id/ThumbPic"
        android:layout_width="wrap_content"
        android:layout_height="360dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:adjustViewBounds="true"
        android:maxWidth="42dp"
        android:maxHeight="42dp"
        android:scaleType="fitXY"
        android:src="@mipmap/ic_launcher" />

    <Button
        android:id="@+id/btnLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnCamera"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp"
        android:layout_marginStart="11dp"
        android:layout_marginLeft="11dp"
        android:layout_marginBottom="50dp"
        android:onClick="onClick"
        android:text="Prev" />


    <Button
        android:id="@+id/btnRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnLeft"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="11dp"
        android:onClick="onClick"
        android:text="Next" />

    <Button
        android:id="@+id/btnFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="filter"
        android:onClick="SearchPage"
        android:layout_alignBaseline="@+id/btnCamera"
        android:layout_alignBottom="@+id/btnCamera"
        android:layout_alignParentRight="true"
        android:layout_marginRight="11dp"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/btnCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btnLeft"
        android:layout_alignLeft="@+id/btnLeft"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="29dp"
        android:onClick="TakePicture"
        android:text="Camera" />

    <EditText
        android:id="@+id/editKeyword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:layout_marginBottom="211dp"
        android:ems="10"
        android:hint="Add Keyword"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/confirmKeyword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="31dp"
        android:layout_marginRight="31dp"
        android:layout_marginBottom="210dp"
        android:onClick="onClick"
        android:text="Enter" />

    <Button
        android:id="@+id/SecureUpload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="153dp"
        android:layout_marginLeft="153dp"
        android:layout_marginBottom="78dp"
        android:onClick="Uploading"
        android:text="Upload" />

    <TextView
        android:id="@+id/UploadStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="155dp"
        android:layout_marginLeft="155dp"
        android:layout_marginBottom="35dp"
        android:text="Upload Status" />

</RelativeLayout>
