<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Search">

    <EditText
        android:id="@+id/search_Keyword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_Country"
        android:layout_alignEnd="@id/search_toDate"
        android:layout_alignRight="@id/search_toDate"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="text" />

    <EditText
        android:id="@+id/search_Country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_city"
        android:layout_alignEnd="@id/search_toDate"
        android:layout_alignRight="@id/search_toDate"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="eg. Canada"
        android:inputType="text" />

    <TextView
        android:id="@+id/search_CountryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/search_fromDateLabel"
        android:layout_alignLeft="@+id/search_fromDateLabel"
        android:layout_alignTop="@+id/search_Country"
        android:layout_marginTop="12dp"
        android:text="Country Name:" />

    <TextView
        android:id="@+id/search_KeywordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/search_CountryLabel"
        android:layout_alignLeft="@+id/search_CountryLabel"
        android:layout_alignTop="@+id/search_Keyword"
        android:layout_marginTop="12dp"
        android:text="Keyword:" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Photogallery Application"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/title_search"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/search_fromDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_search"
        android:layout_alignEnd="@+id/title_search"
        android:layout_alignRight="@+id/title_search"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="yyyy/dd/mm"
        android:inputType="date" />

    <TextView
        android:text="From Date: "
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/search_fromDate"
        android:layout_alignLeft="@+id/title_search"
        android:layout_alignStart="@+id/title_search"
        android:layout_marginBottom="11dp"
        android:id="@+id/search_fromDateLabel" />

    <EditText
        android:id="@+id/search_toDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_fromDate"
        android:layout_alignEnd="@+id/search_fromDate"
        android:layout_alignRight="@+id/search_fromDate"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="yyyy/mm/dd"
        android:inputType="date" />

    <TextView
        android:text="To Date: "
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/search_toDate"
        android:layout_alignLeft="@+id/search_fromDateLabel"
        android:layout_alignStart="@+id/search_fromDateLabel"
        android:layout_marginTop="12dp"
        android:id="@+id/search_toDateLabel" />

    <EditText
        android:id="@+id/search_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_toDate"
        android:layout_alignEnd="@id/search_toDate"
        android:layout_alignRight="@id/search_toDate"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="eg. Vancouver"
        android:inputType="text" />

    <TextView
        android:id="@+id/search_CityLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/search_fromDateLabel"
        android:layout_alignLeft="@+id/search_fromDateLabel"
        android:layout_alignTop="@+id/search_city"
        android:layout_marginTop="12dp"
        android:text="City Name:" />

    <Button
        android:id="@+id/search_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/search_toDate"
        android:layout_alignRight="@+id/search_toDate"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="29dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:onClick="Cancel"
        android:text="Cancel" />

    <Button
        android:id="@+id/search_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="29dp"
        android:layout_toEndOf="@+id/search_toDateLabel"
        android:layout_toRightOf="@+id/search_toDateLabel"
        android:onClick="Search"
        android:text="Search" />

</RelativeLayout>
